--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,22 @@
 .App {
   text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.nameList {
+	height: 100%;
+	width: 300px;
+	position: absolute;
+	top: 30px; 
+	left: calc(50% - 150px);
+}
+
+ul {
+	margin-top: 10px;
+	list-style-type: none;
+}
+
+li {
+	margin-top: 10px;
+	cursor: pointer;
 }
