--- a/my-app/src/styles/components/_header.sass
+++ b/my-app/src/styles/components/_header.sass
@@ -3,7 +3,7 @@
   overflow: hidden
   border-bottom: 1px solid #ccc
   box-shadow: 0 0 16px 0 #909090
-  background: $brand-color
+  //background: $brand-color
 
 .header-content
   align-items: center   
