--- a/my-app/src/styles/components/_main.sass
+++ b/my-app/src/styles/components/_main.sass
@@ -1,8 +1,24 @@
+body
+  margin: 0
+  padding: 0
+  color: $black
+  
 .App
   text-align: center
+  font-family: 'Helvetica'
 
 ul
   list-style: none
+  display: inline-flex
+  width: 100%
 
 li
-  cursor: pointer    
+  cursor: pointer
+  flex: 1
+  
+a
+  text-decoration: none
+  color: $black
+
+h1
+  color: $brand-color  
