--- a/my-app/src/styles/components/_main.sass
+++ b/my-app/src/styles/components/_main.sass
@@ -21,4 +21,18 @@ a
   color: $black
 
 h1
-  color: $brand-color  
+  color: $brand-color
+
+.logo
+  max-width: 800px  
+  
+.default-content
+  height: 700px
+  display: flex
+  align-items: center
+  justify-content: center
+  flex-direction: column
+
+.container
+  max-width: 1360px
+  margin: 0 auto  
