--- a/my-app/src/styles/components/_header.sass
+++ b/my-app/src/styles/components/_header.sass
@@ -9,7 +9,7 @@
   align-items: center   
 
 .logo
-  width: 20%
+  //width: 20%
   display: inline-block
   box-sizing: border-box
   overflow: hidden
