--- a/my-app/src/styles/components/_main.sass
+++ b/my-app/src/styles/components/_main.sass
@@ -2,6 +2,7 @@ body
   margin: 0
   padding: 0
   color: $black
+  overflow: hidden
   
 .App
   text-align: center
@@ -11,6 +12,8 @@ ul
   list-style: none
   display: inline-flex
   width: 100%
+  box-sizing: border-box
+  padding: 0
 
 li
   cursor: pointer
@@ -24,7 +27,7 @@ h1
   color: $brand-color
 
 .logo
-  max-width: 800px  
+  max-width: 400px  
   
 .default-content
   height: 700px
@@ -35,4 +38,15 @@ h1
 
 .container
   max-width: 1360px
-  margin: 0 auto  
+  margin: 0 auto
+
+
+@media only screen and (min-width: 760px)  
+  .logo
+    max-width: 600px
+
+    
+@media only screen and (min-width: 1024px)  
+  .logo
+    max-width: 800px
+
